src/main/terraform/03_Kubernetes_EXT/module-01/remote_resources_03_kube_ext/k8/kc-db.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc-pg-d
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-pg
  template:
    metadata:
      labels:
        app: keycloak-pg
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: keycloak-pg-svc
  namespace: keycloak
  labels:
    app: keycloak-pg
spec:
  type: NodePort
  ports:
    - name: node-port
      port: 5432
      targetPort: 5432
      nodePort: 31000
  selector:
    app: keycloak-pg
