src/main/terraform/03_Kubernetes_EXT/module-01/remote_resources_03_kube_ext/k8/kc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: keycloak
    spec:
      containers:
        - image: quay.io/keycloak/keycloak
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: keycloak
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 32000
  selector:
    app: keycloak
